// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages searchOperator should render a selection error when the user tries to add operators without selecting any search results 1`] = `
<BaseLayout
  description="Search Operators page for the Create Fares Data Service"
  title="Search Operators - Create Fares Data Service"
>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-two-thirds"
    >
      <ErrorSummary
        errors={Array []}
      />
      <CsrfForm
        action="/api/searchOperators"
        csrfToken=""
        method="post"
      >
        <div
          className="govuk-form-group "
        >
          <fieldset
            className="govuk-fieldset"
          >
            <legend
              className="govuk-fieldset__legend--l"
            >
              <h2
                className="govuk-fieldset__heading"
                id="operator-search"
              >
                Search for the operators that the ticket covers
              </h2>
            </legend>
            <label
              className="govuk-label"
              htmlFor="search-input"
            >
              Operator name
            </label>
            <input
              className="govuk-input govuk-!-width-three-quarters"
              defaultValue="blac"
              id="search-input"
              name="searchText"
              type="text"
            />
            <input
              name="selectedOperators"
              type="hidden"
              value={Array []}
            />
            <input
              className="govuk-button govuk-!-margin-left-5"
              id="search-button"
              name="search"
              type="submit"
              value="Search"
            />
          </fieldset>
        </div>
        <input
          name="id"
          readOnly={true}
          type="hidden"
        />
      </CsrfForm>
      <div
        className="govuk-form-group "
      >
        <fieldset
          aria-describedby="operator-search-results"
          className="govuk-fieldset"
        >
          <legend
            className="govuk-fieldset__legend"
          >
            <h2
              className="govuk-body-l govuk-!-margin-bottom-0"
              id="operator-search-results"
            >
              Your search for '
              <strong>
                blac
              </strong>
              ' returned
              <strong>
                 
                1
                 result
              </strong>
            </h2>
          </legend>
          <FormElementWrapper
            errorClass=""
            errorId="add-operator-0"
            errors={Array []}
          >
            <div
              className="govuk-checkboxes"
            >
              <p
                className="govuk-hint"
                id="bods-hint-text"
              >
                Select the operators results and click add operator(s). Bus data is taken from Bus Open Data Service (BODS). Any other transport modes will be sourced from Traveline National Dataset (TNDS).
              </p>
              <p
                className="govuk-hint"
                id="noc-hint-text"
              >
                You will see that all operator names are followed by a series of characters. These characters are the operator's National Operator Code (NOC).
              </p>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-BLAC"
              >
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="id"
                  id="operator-to-add-0"
                  onClick={[Function]}
                  role="input"
                >
                  Blackpool
                   - 
                  BLAC
                </label>
              </div>
            </div>
          </FormElementWrapper>
        </fieldset>
      </div>
    </div>
    <div
      className="govuk-grid-column-one-third selectedOperators"
    >
      <CsrfForm
        action="/api/searchOperators"
        csrfToken=""
        method="post"
      >
        <div>
          <div
            className="govuk-form-group "
          >
            <fieldset
              className="govuk-fieldset"
            >
              <legend
                className="govuk-fieldset__legend--m"
              >
                <h3
                  className="govuk-fieldset__heading"
                  id="operator-group-name-heading"
                >
                  Enter a name for this group
                </h3>
              </legend>
              <input
                aria-labelledby="operator-group-name-heading"
                className="govuk-input "
                defaultValue=""
                id="operator-group-name"
                key="operator-group-name"
                name="operatorGroupName"
                type="text"
              />
            </fieldset>
          </div>
          <table
            className="border-collapse width-100"
          >
            <caption
              className="govuk-table__caption govuk-table__caption--m"
            >
              Selected operator(s)
            </caption>
            <thead
              className="selectedOperators-header-color"
            >
              <tr>
                <th
                  className="govuk-!-padding-left-2 govuk-table__header govuk-table__caption--s govuk-!-font-size-16"
                  scope="col"
                >
                  0
                   added
                </th>
                <th
                  className="govuk-table__header text-align-right"
                  scope="col"
                >
                  <button
                    className="selectedOperators-button button-link govuk-!-margin-left-2"
                    id="removeAll"
                    name="removeOperator"
                    onClick={[Function]}
                  >
                    Remove all
                  </button>
                </th>
              </tr>
            </thead>
            <tbody
              className="govuk-table__body"
            />
          </table>
        </div>
        <div>
          <input
            className="govuk-button width-100"
            id="continue-button"
            name="continueButtonClick"
            type="submit"
            value="Confirm operators and continue"
          />
          <input
            name="id"
            readOnly={true}
            type="hidden"
          />
        </div>
      </CsrfForm>
    </div>
  </div>
</BaseLayout>
`;

exports[`pages searchOperator should render a selection error when the user tries to remove selected operators without making a selection 1`] = `
<BaseLayout
  description="Search Operators page for the Create Fares Data Service"
  title="Search Operators - Create Fares Data Service"
>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-two-thirds"
    >
      <ErrorSummary
        errors={Array []}
      />
      <CsrfForm
        action="/api/searchOperators"
        csrfToken=""
        method="post"
      >
        <div
          className="govuk-form-group "
        >
          <fieldset
            className="govuk-fieldset"
          >
            <legend
              className="govuk-fieldset__legend--m"
            >
              <h2
                className="govuk-fieldset__heading"
                id="operator-search"
              >
                Search for more operators that the ticket covers
              </h2>
            </legend>
            <label
              className="govuk-label"
              htmlFor="search-input"
            >
              Operator name
            </label>
            <input
              className="govuk-input govuk-!-width-three-quarters"
              defaultValue=""
              id="search-input"
              name="searchText"
              type="text"
            />
            <input
              name="selectedOperators"
              type="hidden"
              value={
                Array [
                  "WBTR#Warrington's Own Buses",
                  "BLAC#Blackpool Transport",
                  "IWBusCo#IW Bus Co",
                ]
              }
            />
            <input
              id="add-operator-0"
              key="input-WBTR"
              name="userSelectedOperators"
              type="hidden"
              value="WBTR#Warrington's Own Buses"
            />
            <input
              id="add-operator-1"
              key="input-BLAC"
              name="userSelectedOperators"
              type="hidden"
              value="BLAC#Blackpool Transport"
            />
            <input
              id="add-operator-2"
              key="input-IWBusCo"
              name="userSelectedOperators"
              type="hidden"
              value="IWBusCo#IW Bus Co"
            />
            <input
              className="govuk-button govuk-!-margin-left-5"
              id="search-button"
              name="search"
              type="submit"
              value="Search"
            />
          </fieldset>
        </div>
        <input
          name="id"
          readOnly={true}
          type="hidden"
        />
      </CsrfForm>
    </div>
    <div
      className="govuk-grid-column-one-third selectedOperators"
    >
      <CsrfForm
        action="/api/searchOperators"
        csrfToken=""
        method="post"
      >
        <div>
          <div
            className="govuk-form-group "
          >
            <fieldset
              className="govuk-fieldset"
            >
              <legend
                className="govuk-fieldset__legend--m"
              >
                <h3
                  className="govuk-fieldset__heading"
                  id="operator-group-name-heading"
                >
                  Enter a name for this group
                </h3>
              </legend>
              <input
                aria-labelledby="operator-group-name-heading"
                className="govuk-input "
                defaultValue=""
                id="operator-group-name"
                key="operator-group-name"
                name="operatorGroupName"
                type="text"
              />
            </fieldset>
          </div>
          <table
            className="border-collapse width-100"
          >
            <caption
              className="govuk-table__caption govuk-table__caption--m"
            >
              Selected operator(s)
            </caption>
            <thead
              className="selectedOperators-header-color"
            >
              <tr>
                <th
                  className="govuk-!-padding-left-2 govuk-table__header govuk-table__caption--s govuk-!-font-size-16"
                  scope="col"
                >
                  3
                   added
                </th>
                <th
                  className="govuk-table__header text-align-right"
                  scope="col"
                >
                  <button
                    className="selectedOperators-button button-link govuk-!-margin-left-2"
                    id="removeAll"
                    name="removeOperator"
                    onClick={[Function]}
                  >
                    Remove all
                  </button>
                </th>
              </tr>
            </thead>
            <tbody
              className="govuk-table__body"
            >
              <tr
                key="selected-operator-0"
              >
                <td
                  className="govuk-label govuk-!-font-size-16 govuk-!-padding-top-1"
                  key="td0-0"
                >
                  Warrington's Own Buses
                   - 
                  WBTR
                </td>
                <td
                  className="govuk-link text-align-right"
                  key="td1-0"
                >
                  <button
                    className="govuk-link button-link"
                    id="remove-0"
                    name="removeOperator"
                    onClick={[Function]}
                    value="Warrington's Own Buses"
                  >
                    Remove
                  </button>
                </td>
              </tr>
              <tr
                key="selected-operator-1"
              >
                <td
                  className="govuk-label govuk-!-font-size-16 govuk-!-padding-top-1"
                  key="td0-1"
                >
                  Blackpool Transport
                   - 
                  BLAC
                </td>
                <td
                  className="govuk-link text-align-right"
                  key="td1-1"
                >
                  <button
                    className="govuk-link button-link"
                    id="remove-1"
                    name="removeOperator"
                    onClick={[Function]}
                    value="Blackpool Transport"
                  >
                    Remove
                  </button>
                </td>
              </tr>
              <tr
                key="selected-operator-2"
              >
                <td
                  className="govuk-label govuk-!-font-size-16 govuk-!-padding-top-1"
                  key="td0-2"
                >
                  IW Bus Co
                   - 
                  IWBusCo
                </td>
                <td
                  className="govuk-link text-align-right"
                  key="td1-2"
                >
                  <button
                    className="govuk-link button-link"
                    id="remove-2"
                    name="removeOperator"
                    onClick={[Function]}
                    value="IW Bus Co"
                  >
                    Remove
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div>
          <input
            id="add-operator-0"
            name="userSelectedOperators"
            type="hidden"
            value="WBTR#Warrington's Own Buses"
          />
          <input
            id="add-operator-1"
            name="userSelectedOperators"
            type="hidden"
            value="BLAC#Blackpool Transport"
          />
          <input
            id="add-operator-2"
            name="userSelectedOperators"
            type="hidden"
            value="IWBusCo#IW Bus Co"
          />
          <input
            className="govuk-button width-100"
            id="continue-button"
            name="continueButtonClick"
            type="submit"
            value="Confirm operators and continue"
          />
          <input
            name="id"
            readOnly={true}
            type="hidden"
          />
        </div>
      </CsrfForm>
    </div>
  </div>
</BaseLayout>
`;

exports[`pages searchOperator should render an input error when the user makes an unsucessful search 1`] = `
<BaseLayout
  description="Search Operators page for the Create Fares Data Service"
  title="Search Operators - Create Fares Data Service"
>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-two-thirds"
    >
      <ErrorSummary
        errors={
          Array [
            Object {
              "errorMessage": "Search requires a minimum of three characters",
              "id": "search-input",
            },
          ]
        }
      />
      <CsrfForm
        action="/api/searchOperators"
        csrfToken=""
        method="post"
      >
        <div
          className="govuk-form-group govuk-form-group--error"
        >
          <fieldset
            className="govuk-fieldset"
          >
            <legend
              className="govuk-fieldset__legend--l"
            >
              <h2
                className="govuk-fieldset__heading"
                id="operator-search"
              >
                Search for the operators that the ticket covers
              </h2>
            </legend>
            <span
              className="govuk-error-message"
              id="search-input-error"
            >
              <span
                className="govuk-visually-hidden"
              >
                Error: 
              </span>
              Search requires a minimum of three characters
            </span>
            <label
              className="govuk-label"
              htmlFor="search-input"
            >
              Operator name
            </label>
            <input
              className="govuk-input govuk-!-width-three-quarters govuk-input--error"
              defaultValue=""
              id="search-input"
              name="searchText"
              type="text"
            />
            <input
              name="selectedOperators"
              type="hidden"
              value={Array []}
            />
            <input
              className="govuk-button govuk-!-margin-left-5"
              id="search-button"
              name="search"
              type="submit"
              value="Search"
            />
          </fieldset>
        </div>
        <input
          name="id"
          readOnly={true}
          type="hidden"
        />
      </CsrfForm>
    </div>
    <div
      className="govuk-grid-column-one-third selectedOperators"
    >
      <CsrfForm
        action="/api/searchOperators"
        csrfToken=""
        method="post"
      >
        <div>
          <div
            className="govuk-form-group "
          >
            <fieldset
              className="govuk-fieldset"
            >
              <legend
                className="govuk-fieldset__legend--m"
              >
                <h3
                  className="govuk-fieldset__heading"
                  id="operator-group-name-heading"
                >
                  Enter a name for this group
                </h3>
              </legend>
              <input
                aria-labelledby="operator-group-name-heading"
                className="govuk-input "
                defaultValue=""
                id="operator-group-name"
                key="operator-group-name"
                name="operatorGroupName"
                type="text"
              />
            </fieldset>
          </div>
          <table
            className="border-collapse width-100"
          >
            <caption
              className="govuk-table__caption govuk-table__caption--m"
            >
              Selected operator(s)
            </caption>
            <thead
              className="selectedOperators-header-color"
            >
              <tr>
                <th
                  className="govuk-!-padding-left-2 govuk-table__header govuk-table__caption--s govuk-!-font-size-16"
                  scope="col"
                >
                  0
                   added
                </th>
                <th
                  className="govuk-table__header text-align-right"
                  scope="col"
                >
                  <button
                    className="selectedOperators-button button-link govuk-!-margin-left-2"
                    id="removeAll"
                    name="removeOperator"
                    onClick={[Function]}
                  >
                    Remove all
                  </button>
                </th>
              </tr>
            </thead>
            <tbody
              className="govuk-table__body"
            />
          </table>
        </div>
        <div>
          <input
            className="govuk-button width-100"
            id="continue-button"
            name="continueButtonClick"
            type="submit"
            value="Confirm operators and continue"
          />
          <input
            name="id"
            readOnly={true}
            type="hidden"
          />
        </div>
      </CsrfForm>
    </div>
  </div>
</BaseLayout>
`;

exports[`pages searchOperator should render just the search input when the user first visits the page 1`] = `
<BaseLayout
  description="Search Operators page for the Create Fares Data Service"
  title="Search Operators - Create Fares Data Service"
>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-two-thirds"
    >
      <ErrorSummary
        errors={Array []}
      />
      <CsrfForm
        action="/api/searchOperators"
        csrfToken=""
        method="post"
      >
        <div
          className="govuk-form-group "
        >
          <fieldset
            className="govuk-fieldset"
          >
            <legend
              className="govuk-fieldset__legend--l"
            >
              <h2
                className="govuk-fieldset__heading"
                id="operator-search"
              >
                Search for the operators that the ticket covers
              </h2>
            </legend>
            <label
              className="govuk-label"
              htmlFor="search-input"
            >
              Operator name
            </label>
            <input
              className="govuk-input govuk-!-width-three-quarters"
              defaultValue=""
              id="search-input"
              name="searchText"
              type="text"
            />
            <input
              name="selectedOperators"
              type="hidden"
              value={Array []}
            />
            <input
              className="govuk-button govuk-!-margin-left-5"
              id="search-button"
              name="search"
              type="submit"
              value="Search"
            />
          </fieldset>
        </div>
        <input
          name="id"
          readOnly={true}
          type="hidden"
        />
      </CsrfForm>
    </div>
    <div
      className="govuk-grid-column-one-third selectedOperators"
    >
      <CsrfForm
        action="/api/searchOperators"
        csrfToken=""
        method="post"
      >
        <div>
          <div
            className="govuk-form-group "
          >
            <fieldset
              className="govuk-fieldset"
            >
              <legend
                className="govuk-fieldset__legend--m"
              >
                <h3
                  className="govuk-fieldset__heading"
                  id="operator-group-name-heading"
                >
                  Enter a name for this group
                </h3>
              </legend>
              <input
                aria-labelledby="operator-group-name-heading"
                className="govuk-input "
                defaultValue=""
                id="operator-group-name"
                key="operator-group-name"
                name="operatorGroupName"
                type="text"
              />
            </fieldset>
          </div>
          <table
            className="border-collapse width-100"
          >
            <caption
              className="govuk-table__caption govuk-table__caption--m"
            >
              Selected operator(s)
            </caption>
            <thead
              className="selectedOperators-header-color"
            >
              <tr>
                <th
                  className="govuk-!-padding-left-2 govuk-table__header govuk-table__caption--s govuk-!-font-size-16"
                  scope="col"
                >
                  0
                   added
                </th>
                <th
                  className="govuk-table__header text-align-right"
                  scope="col"
                >
                  <button
                    className="selectedOperators-button button-link govuk-!-margin-left-2"
                    id="removeAll"
                    name="removeOperator"
                    onClick={[Function]}
                  >
                    Remove all
                  </button>
                </th>
              </tr>
            </thead>
            <tbody
              className="govuk-table__body"
            />
          </table>
        </div>
        <div>
          <input
            className="govuk-button width-100"
            id="continue-button"
            name="continueButtonClick"
            type="submit"
            value="Confirm operators and continue"
          />
          <input
            name="id"
            readOnly={true}
            type="hidden"
          />
        </div>
      </CsrfForm>
    </div>
  </div>
</BaseLayout>
`;

exports[`pages searchOperator should render the page in edit mode 1`] = `
<BaseLayout
  description="Search Operators page for the Create Fares Data Service"
  title="Search Operators - Create Fares Data Service"
>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-two-thirds"
    >
      <BackButton
        href="/viewOperatorGroups"
      />
      <InformationSummary
        informationText="Editing and saving new changes will be applied to all fares using this operator group."
      />
      <ErrorSummary
        errors={Array []}
      />
      <CsrfForm
        action="/api/searchOperators"
        csrfToken=""
        method="post"
      >
        <div
          className="govuk-form-group "
        >
          <fieldset
            className="govuk-fieldset"
          >
            <legend
              className="govuk-fieldset__legend--m"
            >
              <h2
                className="govuk-fieldset__heading"
                id="operator-search"
              >
                Search for more operators that the ticket covers
              </h2>
            </legend>
            <label
              className="govuk-label"
              htmlFor="search-input"
            >
              Operator name
            </label>
            <input
              className="govuk-input govuk-!-width-three-quarters"
              defaultValue=""
              id="search-input"
              name="searchText"
              type="text"
            />
            <input
              name="selectedOperators"
              type="hidden"
              value={
                Array [
                  "WBTR#Warrington's Own Buses",
                  "BLAC#Blackpool Transport",
                  "IWBusCo#IW Bus Co",
                ]
              }
            />
            <input
              id="add-operator-0"
              key="input-WBTR"
              name="userSelectedOperators"
              type="hidden"
              value="WBTR#Warrington's Own Buses"
            />
            <input
              id="add-operator-1"
              key="input-BLAC"
              name="userSelectedOperators"
              type="hidden"
              value="BLAC#Blackpool Transport"
            />
            <input
              id="add-operator-2"
              key="input-IWBusCo"
              name="userSelectedOperators"
              type="hidden"
              value="IWBusCo#IW Bus Co"
            />
            <input
              className="govuk-button govuk-!-margin-left-5"
              id="search-button"
              name="search"
              type="submit"
              value="Search"
            />
          </fieldset>
        </div>
        <input
          name="id"
          readOnly={true}
          type="hidden"
          value={1}
        />
      </CsrfForm>
      <div
        className="govuk-form-group "
      >
        <fieldset
          aria-describedby="operator-search-results"
          className="govuk-fieldset"
        >
          <legend
            className="govuk-fieldset__legend"
          >
            <h2
              className="govuk-body-l govuk-!-margin-bottom-0"
              id="operator-search-results"
            >
              Your search for '
              <strong />
              ' returned
              <strong>
                 
                1
                 result
              </strong>
            </h2>
          </legend>
          <FormElementWrapper
            errorClass=""
            errorId="add-operator-0"
            errors={Array []}
          >
            <div
              className="govuk-checkboxes"
            >
              <p
                className="govuk-hint"
                id="bods-hint-text"
              >
                Select the operators results and click add operator(s). Bus data is taken from Bus Open Data Service (BODS). Any other transport modes will be sourced from Traveline National Dataset (TNDS).
              </p>
              <p
                className="govuk-hint"
                id="noc-hint-text"
              >
                You will see that all operator names are followed by a series of characters. These characters are the operator's National Operator Code (NOC).
              </p>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-WBTR"
              >
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="id"
                  id="operator-to-add-0"
                  onClick={[Function]}
                  role="input"
                >
                  Warrington's Own Buses
                   - 
                  WBTR
                </label>
              </div>
            </div>
          </FormElementWrapper>
        </fieldset>
      </div>
    </div>
    <div
      className="govuk-grid-column-one-third selectedOperators"
    >
      <CsrfForm
        action="/api/searchOperators"
        csrfToken=""
        method="post"
      >
        <div>
          <div
            className="govuk-form-group "
          >
            <fieldset
              className="govuk-fieldset"
            >
              <legend
                className="govuk-fieldset__legend--m"
              >
                <h3
                  className="govuk-fieldset__heading"
                  id="operator-group-name-heading"
                >
                  Enter a name for this group
                </h3>
              </legend>
              <input
                aria-labelledby="operator-group-name-heading"
                className="govuk-input "
                defaultValue="OperatorG Group"
                id="operator-group-name"
                key="operator-group-name"
                name="operatorGroupName"
                type="text"
              />
            </fieldset>
          </div>
          <table
            className="border-collapse width-100"
          >
            <caption
              className="govuk-table__caption govuk-table__caption--m"
            >
              Selected operator(s)
            </caption>
            <thead
              className="selectedOperators-header-color"
            >
              <tr>
                <th
                  className="govuk-!-padding-left-2 govuk-table__header govuk-table__caption--s govuk-!-font-size-16"
                  scope="col"
                >
                  3
                   added
                </th>
                <th
                  className="govuk-table__header text-align-right"
                  scope="col"
                >
                  <button
                    className="selectedOperators-button button-link govuk-!-margin-left-2"
                    id="removeAll"
                    name="removeOperator"
                    onClick={[Function]}
                  >
                    Remove all
                  </button>
                </th>
              </tr>
            </thead>
            <tbody
              className="govuk-table__body"
            >
              <tr
                key="selected-operator-0"
              >
                <td
                  className="govuk-label govuk-!-font-size-16 govuk-!-padding-top-1"
                  key="td0-0"
                >
                  Warrington's Own Buses
                   - 
                  WBTR
                </td>
                <td
                  className="govuk-link text-align-right"
                  key="td1-0"
                >
                  <button
                    className="govuk-link button-link"
                    id="remove-0"
                    name="removeOperator"
                    onClick={[Function]}
                    value="Warrington's Own Buses"
                  >
                    Remove
                  </button>
                </td>
              </tr>
              <tr
                key="selected-operator-1"
              >
                <td
                  className="govuk-label govuk-!-font-size-16 govuk-!-padding-top-1"
                  key="td0-1"
                >
                  Blackpool Transport
                   - 
                  BLAC
                </td>
                <td
                  className="govuk-link text-align-right"
                  key="td1-1"
                >
                  <button
                    className="govuk-link button-link"
                    id="remove-1"
                    name="removeOperator"
                    onClick={[Function]}
                    value="Blackpool Transport"
                  >
                    Remove
                  </button>
                </td>
              </tr>
              <tr
                key="selected-operator-2"
              >
                <td
                  className="govuk-label govuk-!-font-size-16 govuk-!-padding-top-1"
                  key="td0-2"
                >
                  IW Bus Co
                   - 
                  IWBusCo
                </td>
                <td
                  className="govuk-link text-align-right"
                  key="td1-2"
                >
                  <button
                    className="govuk-link button-link"
                    id="remove-2"
                    name="removeOperator"
                    onClick={[Function]}
                    value="IW Bus Co"
                  >
                    Remove
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div>
          <input
            id="add-operator-0"
            name="userSelectedOperators"
            type="hidden"
            value="WBTR#Warrington's Own Buses"
          />
          <input
            id="add-operator-1"
            name="userSelectedOperators"
            type="hidden"
            value="BLAC#Blackpool Transport"
          />
          <input
            id="add-operator-2"
            name="userSelectedOperators"
            type="hidden"
            value="IWBusCo#IW Bus Co"
          />
          <input
            className="govuk-button width-100"
            id="continue-button"
            name="continueButtonClick"
            type="submit"
            value="Confirm operators and continue"
          />
          <input
            name="id"
            readOnly={true}
            type="hidden"
            value={1}
          />
        </div>
      </CsrfForm>
    </div>
  </div>
</BaseLayout>
`;

exports[`pages searchOperator should render the search input and a list of selected operators when search results have been selected 1`] = `
<BaseLayout
  description="Search Operators page for the Create Fares Data Service"
  title="Search Operators - Create Fares Data Service"
>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-two-thirds"
    >
      <ErrorSummary
        errors={Array []}
      />
      <CsrfForm
        action="/api/searchOperators"
        csrfToken=""
        method="post"
      >
        <div
          className="govuk-form-group "
        >
          <fieldset
            className="govuk-fieldset"
          >
            <legend
              className="govuk-fieldset__legend--m"
            >
              <h2
                className="govuk-fieldset__heading"
                id="operator-search"
              >
                Search for more operators that the ticket covers
              </h2>
            </legend>
            <label
              className="govuk-label"
              htmlFor="search-input"
            >
              Operator name
            </label>
            <input
              className="govuk-input govuk-!-width-three-quarters"
              defaultValue=""
              id="search-input"
              name="searchText"
              type="text"
            />
            <input
              name="selectedOperators"
              type="hidden"
              value={
                Array [
                  "WBTR#Warrington's Own Buses",
                  "BLAC#Blackpool Transport",
                  "IWBusCo#IW Bus Co",
                ]
              }
            />
            <input
              id="add-operator-0"
              key="input-WBTR"
              name="userSelectedOperators"
              type="hidden"
              value="WBTR#Warrington's Own Buses"
            />
            <input
              id="add-operator-1"
              key="input-BLAC"
              name="userSelectedOperators"
              type="hidden"
              value="BLAC#Blackpool Transport"
            />
            <input
              id="add-operator-2"
              key="input-IWBusCo"
              name="userSelectedOperators"
              type="hidden"
              value="IWBusCo#IW Bus Co"
            />
            <input
              className="govuk-button govuk-!-margin-left-5"
              id="search-button"
              name="search"
              type="submit"
              value="Search"
            />
          </fieldset>
        </div>
        <input
          name="id"
          readOnly={true}
          type="hidden"
        />
      </CsrfForm>
    </div>
    <div
      className="govuk-grid-column-one-third selectedOperators"
    >
      <CsrfForm
        action="/api/searchOperators"
        csrfToken=""
        method="post"
      >
        <div>
          <div
            className="govuk-form-group "
          >
            <fieldset
              className="govuk-fieldset"
            >
              <legend
                className="govuk-fieldset__legend--m"
              >
                <h3
                  className="govuk-fieldset__heading"
                  id="operator-group-name-heading"
                >
                  Enter a name for this group
                </h3>
              </legend>
              <input
                aria-labelledby="operator-group-name-heading"
                className="govuk-input "
                defaultValue=""
                id="operator-group-name"
                key="operator-group-name"
                name="operatorGroupName"
                type="text"
              />
            </fieldset>
          </div>
          <table
            className="border-collapse width-100"
          >
            <caption
              className="govuk-table__caption govuk-table__caption--m"
            >
              Selected operator(s)
            </caption>
            <thead
              className="selectedOperators-header-color"
            >
              <tr>
                <th
                  className="govuk-!-padding-left-2 govuk-table__header govuk-table__caption--s govuk-!-font-size-16"
                  scope="col"
                >
                  3
                   added
                </th>
                <th
                  className="govuk-table__header text-align-right"
                  scope="col"
                >
                  <button
                    className="selectedOperators-button button-link govuk-!-margin-left-2"
                    id="removeAll"
                    name="removeOperator"
                    onClick={[Function]}
                  >
                    Remove all
                  </button>
                </th>
              </tr>
            </thead>
            <tbody
              className="govuk-table__body"
            >
              <tr
                key="selected-operator-0"
              >
                <td
                  className="govuk-label govuk-!-font-size-16 govuk-!-padding-top-1"
                  key="td0-0"
                >
                  Warrington's Own Buses
                   - 
                  WBTR
                </td>
                <td
                  className="govuk-link text-align-right"
                  key="td1-0"
                >
                  <button
                    className="govuk-link button-link"
                    id="remove-0"
                    name="removeOperator"
                    onClick={[Function]}
                    value="Warrington's Own Buses"
                  >
                    Remove
                  </button>
                </td>
              </tr>
              <tr
                key="selected-operator-1"
              >
                <td
                  className="govuk-label govuk-!-font-size-16 govuk-!-padding-top-1"
                  key="td0-1"
                >
                  Blackpool Transport
                   - 
                  BLAC
                </td>
                <td
                  className="govuk-link text-align-right"
                  key="td1-1"
                >
                  <button
                    className="govuk-link button-link"
                    id="remove-1"
                    name="removeOperator"
                    onClick={[Function]}
                    value="Blackpool Transport"
                  >
                    Remove
                  </button>
                </td>
              </tr>
              <tr
                key="selected-operator-2"
              >
                <td
                  className="govuk-label govuk-!-font-size-16 govuk-!-padding-top-1"
                  key="td0-2"
                >
                  IW Bus Co
                   - 
                  IWBusCo
                </td>
                <td
                  className="govuk-link text-align-right"
                  key="td1-2"
                >
                  <button
                    className="govuk-link button-link"
                    id="remove-2"
                    name="removeOperator"
                    onClick={[Function]}
                    value="IW Bus Co"
                  >
                    Remove
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div>
          <input
            id="add-operator-0"
            name="userSelectedOperators"
            type="hidden"
            value="WBTR#Warrington's Own Buses"
          />
          <input
            id="add-operator-1"
            name="userSelectedOperators"
            type="hidden"
            value="BLAC#Blackpool Transport"
          />
          <input
            id="add-operator-2"
            name="userSelectedOperators"
            type="hidden"
            value="IWBusCo#IW Bus Co"
          />
          <input
            className="govuk-button width-100"
            id="continue-button"
            name="continueButtonClick"
            type="submit"
            value="Confirm operators and continue"
          />
          <input
            name="id"
            readOnly={true}
            type="hidden"
          />
        </div>
      </CsrfForm>
    </div>
  </div>
</BaseLayout>
`;

exports[`pages searchOperator should render the search input and search results when there is a successful search 1`] = `
<BaseLayout
  description="Search Operators page for the Create Fares Data Service"
  title="Search Operators - Create Fares Data Service"
>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-two-thirds"
    >
      <ErrorSummary
        errors={Array []}
      />
      <CsrfForm
        action="/api/searchOperators"
        csrfToken=""
        method="post"
      >
        <div
          className="govuk-form-group "
        >
          <fieldset
            className="govuk-fieldset"
          >
            <legend
              className="govuk-fieldset__legend--l"
            >
              <h2
                className="govuk-fieldset__heading"
                id="operator-search"
              >
                Search for the operators that the ticket covers
              </h2>
            </legend>
            <label
              className="govuk-label"
              htmlFor="search-input"
            >
              Operator name
            </label>
            <input
              className="govuk-input govuk-!-width-three-quarters"
              defaultValue="blac"
              id="search-input"
              name="searchText"
              type="text"
            />
            <input
              name="selectedOperators"
              type="hidden"
              value={Array []}
            />
            <input
              className="govuk-button govuk-!-margin-left-5"
              id="search-button"
              name="search"
              type="submit"
              value="Search"
            />
          </fieldset>
        </div>
        <input
          name="id"
          readOnly={true}
          type="hidden"
        />
      </CsrfForm>
      <div
        className="govuk-form-group "
      >
        <fieldset
          aria-describedby="operator-search-results"
          className="govuk-fieldset"
        >
          <legend
            className="govuk-fieldset__legend"
          >
            <h2
              className="govuk-body-l govuk-!-margin-bottom-0"
              id="operator-search-results"
            >
              Your search for '
              <strong>
                blac
              </strong>
              ' returned
              <strong>
                 
                1
                 result
              </strong>
            </h2>
          </legend>
          <FormElementWrapper
            errorClass=""
            errorId="add-operator-0"
            errors={Array []}
          >
            <div
              className="govuk-checkboxes"
            >
              <p
                className="govuk-hint"
                id="bods-hint-text"
              >
                Select the operators results and click add operator(s). Bus data is taken from Bus Open Data Service (BODS). Any other transport modes will be sourced from Traveline National Dataset (TNDS).
              </p>
              <p
                className="govuk-hint"
                id="noc-hint-text"
              >
                You will see that all operator names are followed by a series of characters. These characters are the operator's National Operator Code (NOC).
              </p>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-BLAC"
              >
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="id"
                  id="operator-to-add-0"
                  onClick={[Function]}
                  role="input"
                >
                  Blackpool
                   - 
                  BLAC
                </label>
              </div>
            </div>
          </FormElementWrapper>
        </fieldset>
      </div>
    </div>
    <div
      className="govuk-grid-column-one-third selectedOperators"
    >
      <CsrfForm
        action="/api/searchOperators"
        csrfToken=""
        method="post"
      >
        <div>
          <div
            className="govuk-form-group "
          >
            <fieldset
              className="govuk-fieldset"
            >
              <legend
                className="govuk-fieldset__legend--m"
              >
                <h3
                  className="govuk-fieldset__heading"
                  id="operator-group-name-heading"
                >
                  Enter a name for this group
                </h3>
              </legend>
              <input
                aria-labelledby="operator-group-name-heading"
                className="govuk-input "
                defaultValue=""
                id="operator-group-name"
                key="operator-group-name"
                name="operatorGroupName"
                type="text"
              />
            </fieldset>
          </div>
          <table
            className="border-collapse width-100"
          >
            <caption
              className="govuk-table__caption govuk-table__caption--m"
            >
              Selected operator(s)
            </caption>
            <thead
              className="selectedOperators-header-color"
            >
              <tr>
                <th
                  className="govuk-!-padding-left-2 govuk-table__header govuk-table__caption--s govuk-!-font-size-16"
                  scope="col"
                >
                  0
                   added
                </th>
                <th
                  className="govuk-table__header text-align-right"
                  scope="col"
                >
                  <button
                    className="selectedOperators-button button-link govuk-!-margin-left-2"
                    id="removeAll"
                    name="removeOperator"
                    onClick={[Function]}
                  >
                    Remove all
                  </button>
                </th>
              </tr>
            </thead>
            <tbody
              className="govuk-table__body"
            />
          </table>
        </div>
        <div>
          <input
            className="govuk-button width-100"
            id="continue-button"
            name="continueButtonClick"
            type="submit"
            value="Confirm operators and continue"
          />
          <input
            name="id"
            readOnly={true}
            type="hidden"
          />
        </div>
      </CsrfForm>
    </div>
  </div>
</BaseLayout>
`;

exports[`pages searchOperator should render the search input, search results and a list of selected operators when an additional search is made 1`] = `
<BaseLayout
  description="Search Operators page for the Create Fares Data Service"
  title="Search Operators - Create Fares Data Service"
>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-two-thirds"
    >
      <ErrorSummary
        errors={Array []}
      />
      <CsrfForm
        action="/api/searchOperators"
        csrfToken=""
        method="post"
      >
        <div
          className="govuk-form-group "
        >
          <fieldset
            className="govuk-fieldset"
          >
            <legend
              className="govuk-fieldset__legend--m"
            >
              <h2
                className="govuk-fieldset__heading"
                id="operator-search"
              >
                Search for more operators that the ticket covers
              </h2>
            </legend>
            <label
              className="govuk-label"
              htmlFor="search-input"
            >
              Operator name
            </label>
            <input
              className="govuk-input govuk-!-width-three-quarters"
              defaultValue="warri"
              id="search-input"
              name="searchText"
              type="text"
            />
            <input
              name="selectedOperators"
              type="hidden"
              value={
                Array [
                  "WBTR#Warrington's Own Buses",
                  "BLAC#Blackpool Transport",
                  "IWBusCo#IW Bus Co",
                ]
              }
            />
            <input
              id="add-operator-0"
              key="input-WBTR"
              name="userSelectedOperators"
              type="hidden"
              value="WBTR#Warrington's Own Buses"
            />
            <input
              id="add-operator-1"
              key="input-BLAC"
              name="userSelectedOperators"
              type="hidden"
              value="BLAC#Blackpool Transport"
            />
            <input
              id="add-operator-2"
              key="input-IWBusCo"
              name="userSelectedOperators"
              type="hidden"
              value="IWBusCo#IW Bus Co"
            />
            <input
              className="govuk-button govuk-!-margin-left-5"
              id="search-button"
              name="search"
              type="submit"
              value="Search"
            />
          </fieldset>
        </div>
        <input
          name="id"
          readOnly={true}
          type="hidden"
        />
      </CsrfForm>
      <div
        className="govuk-form-group "
      >
        <fieldset
          aria-describedby="operator-search-results"
          className="govuk-fieldset"
        >
          <legend
            className="govuk-fieldset__legend"
          >
            <h2
              className="govuk-body-l govuk-!-margin-bottom-0"
              id="operator-search-results"
            >
              Your search for '
              <strong>
                warri
              </strong>
              ' returned
              <strong>
                 
                1
                 result
              </strong>
            </h2>
          </legend>
          <FormElementWrapper
            errorClass=""
            errorId="add-operator-0"
            errors={Array []}
          >
            <div
              className="govuk-checkboxes"
            >
              <p
                className="govuk-hint"
                id="bods-hint-text"
              >
                Select the operators results and click add operator(s). Bus data is taken from Bus Open Data Service (BODS). Any other transport modes will be sourced from Traveline National Dataset (TNDS).
              </p>
              <p
                className="govuk-hint"
                id="noc-hint-text"
              >
                You will see that all operator names are followed by a series of characters. These characters are the operator's National Operator Code (NOC).
              </p>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-WBTR"
              >
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="id"
                  id="operator-to-add-0"
                  onClick={[Function]}
                  role="input"
                >
                  Warrington's Own Buses
                   - 
                  WBTR
                </label>
              </div>
            </div>
          </FormElementWrapper>
        </fieldset>
      </div>
    </div>
    <div
      className="govuk-grid-column-one-third selectedOperators"
    >
      <CsrfForm
        action="/api/searchOperators"
        csrfToken=""
        method="post"
      >
        <div>
          <div
            className="govuk-form-group "
          >
            <fieldset
              className="govuk-fieldset"
            >
              <legend
                className="govuk-fieldset__legend--m"
              >
                <h3
                  className="govuk-fieldset__heading"
                  id="operator-group-name-heading"
                >
                  Enter a name for this group
                </h3>
              </legend>
              <input
                aria-labelledby="operator-group-name-heading"
                className="govuk-input "
                defaultValue=""
                id="operator-group-name"
                key="operator-group-name"
                name="operatorGroupName"
                type="text"
              />
            </fieldset>
          </div>
          <table
            className="border-collapse width-100"
          >
            <caption
              className="govuk-table__caption govuk-table__caption--m"
            >
              Selected operator(s)
            </caption>
            <thead
              className="selectedOperators-header-color"
            >
              <tr>
                <th
                  className="govuk-!-padding-left-2 govuk-table__header govuk-table__caption--s govuk-!-font-size-16"
                  scope="col"
                >
                  3
                   added
                </th>
                <th
                  className="govuk-table__header text-align-right"
                  scope="col"
                >
                  <button
                    className="selectedOperators-button button-link govuk-!-margin-left-2"
                    id="removeAll"
                    name="removeOperator"
                    onClick={[Function]}
                  >
                    Remove all
                  </button>
                </th>
              </tr>
            </thead>
            <tbody
              className="govuk-table__body"
            >
              <tr
                key="selected-operator-0"
              >
                <td
                  className="govuk-label govuk-!-font-size-16 govuk-!-padding-top-1"
                  key="td0-0"
                >
                  Warrington's Own Buses
                   - 
                  WBTR
                </td>
                <td
                  className="govuk-link text-align-right"
                  key="td1-0"
                >
                  <button
                    className="govuk-link button-link"
                    id="remove-0"
                    name="removeOperator"
                    onClick={[Function]}
                    value="Warrington's Own Buses"
                  >
                    Remove
                  </button>
                </td>
              </tr>
              <tr
                key="selected-operator-1"
              >
                <td
                  className="govuk-label govuk-!-font-size-16 govuk-!-padding-top-1"
                  key="td0-1"
                >
                  Blackpool Transport
                   - 
                  BLAC
                </td>
                <td
                  className="govuk-link text-align-right"
                  key="td1-1"
                >
                  <button
                    className="govuk-link button-link"
                    id="remove-1"
                    name="removeOperator"
                    onClick={[Function]}
                    value="Blackpool Transport"
                  >
                    Remove
                  </button>
                </td>
              </tr>
              <tr
                key="selected-operator-2"
              >
                <td
                  className="govuk-label govuk-!-font-size-16 govuk-!-padding-top-1"
                  key="td0-2"
                >
                  IW Bus Co
                   - 
                  IWBusCo
                </td>
                <td
                  className="govuk-link text-align-right"
                  key="td1-2"
                >
                  <button
                    className="govuk-link button-link"
                    id="remove-2"
                    name="removeOperator"
                    onClick={[Function]}
                    value="IW Bus Co"
                  >
                    Remove
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div>
          <input
            id="add-operator-0"
            name="userSelectedOperators"
            type="hidden"
            value="WBTR#Warrington's Own Buses"
          />
          <input
            id="add-operator-1"
            name="userSelectedOperators"
            type="hidden"
            value="BLAC#Blackpool Transport"
          />
          <input
            id="add-operator-2"
            name="userSelectedOperators"
            type="hidden"
            value="IWBusCo#IW Bus Co"
          />
          <input
            className="govuk-button width-100"
            id="continue-button"
            name="continueButtonClick"
            type="submit"
            value="Confirm operators and continue"
          />
          <input
            name="id"
            readOnly={true}
            type="hidden"
          />
        </div>
      </CsrfForm>
    </div>
  </div>
</BaseLayout>
`;
